--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
             <select class="select"></select>
             <section class="wrap">
 
+ <p align="center" style ="color: black;font-weight:bold;font-size:28px;background-color:green;;font-family:楷体" >
 
+       奋发向上，终身学习<br>
+	bigdata200921<br>
+ </p>
 		    <p align="center" style ="color: black;font-weight:bold;font-size:28px;background-color:green;;font-family:楷体" >
 
        小目标树立信心，大目标指引方向，不卑不亢<br>
